...
            </objects>
            <point key="canvasLocation" x="-242" y="-420"/>
        </scene>
        <!--Selected Shop View Controller-->
        <scene sceneID="hO4-XH-oud">
            <objects>
                <viewController id="RKd-Bp-4gX" customClass="SelectedShopViewController" customModule="Mokets" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="jn6-ep-a6M"/>
                        <viewControllerLayoutGuide type="bottom" id="TeQ-GD-yO8"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="rtf-Ne-faM">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="736"/>
...
                                                        <constraint firstAttribute="height" constant="21" id="bso-oF-2jO"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <color key="textColor" red="0.1333333333" green="0.1333333333" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lTV-3p-uzF">
                                                    <rect key="frame" x="20" y="176" width="335" height="21"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="21" id="Wz3-cr-PK9"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <color key="textColor" red="0.1333333333" green="0.1333333333" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
...
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="52"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView userInteractionEnabled="NO" alpha="0.69999998807907104" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="User-Lite" translatesAutoresizingMaskIntoConstraints="NO" id="zOx-6d-Tfu">
                                                    <rect key="frame" x="27" y="16" width="22" height="22"/>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ld8-Oq-hFr">
                                                    <rect key="frame" x="64" y="16" width="528" height="19.5"/>
                                                    <fontDescription key="fontDescription" name="Monda-Regular" family="Monda" pointSize="15"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <color key="highlightedColor" red="0.29803921570000003" green="0.68627450980000004" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </label>
                                            </subviews>
...
                                        <color key="backgroundColor" red="0.90196078431372551" green="0.29019607843137252" blue="0.098039215686274508" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="75" id="FM0-xH-s0R"/>
                                            <constraint firstAttribute="height" constant="30" id="vPI-Va-q0d"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="Monda-Regular" family="Monda" pointSize="14"/>
                                        <state key="normal" title="Submit">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="SubmitInquiry:" destination="Lfp-OP-gt4" eventType="touchUpInside" id="n94-9V-OS8"/>
                                        </connections>
                                    </button>
...
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email (Eg; david@gmail.com)" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="pZd-XD-7l2">
                                        <rect key="frame" x="0.0" y="93" width="358" height="30"/>
                                        <fontDescription key="fontDescription" name="Monda-Regular" family="Monda" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="mJi-Of-rD8">
                                        <rect key="frame" x="0.0" y="143" width="358" height="30"/>
                                        <fontDescription key="fontDescription" name="Monda-Regular" family="Monda" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WtU-sc-3Sg">
                                        <rect key="frame" x="0.0" y="193" width="358" height="35"/>
...
